--- a/index.html
+++ b/index.html
@@ -850,13 +850,20 @@
             hand to help find the best solution for you and to offer support you whenever you need it.</p>
         </div>
         <form action="contactSuccess" name="contactForm" method="post" class="col-sm-4 d-flex flex-column justify-content-between">
-          <div class="xs-mb-1 input-container"><input placeholder=" " name="formContactName" id="name" class="text-input" type="text"><label
-            for="name">First Name</label></div>
-          <div class="xs-mb-1 input-container"><input placeholder=" " id="lastname" class="text-input"
-                                                      type="text"><label
-            for="lastname">Last Name</label></div>
-          <div class="xs-mb-1 input-container"><input placeholder=" " id="email" class="text-input" type="text"><label
-            for="email">Email</label></div>
+          <input type="hidden" name="form-name" value="contactForm">
+          <div class="xs-mb-1 input-container">
+            <input placeholder=" " id="name" required name="fullContactName" class="text-input mb-1"
+                   type="text"><label
+            for="name">Full Name</label></div>
+          <div class="xs-mb-1 input-container">
+            <input placeholder=" " id="contactEmail" name="contactEmail" id="contactEmail" class="text-input mb-1" type="text">
+            <label for="contactEmail">Email</label></div>
+          <div class="xs-mb-1 input-container">
+            <input placeholder=" " name="formContactPhone" id="contactPhone" class="text-input mb-1" type="text"><label
+            for="email">Phone</label></div>
+          <div class="xs-mb-1 input-container">
+          <textarea style="font-size: 14px; min-height: 100px" placeholder="Details"
+                    id="email" class="text-input mb-1" type="text"></textarea></div>
 
           <input class="btn btn-primary" value="Submit" type="submit">
         </form>
