--- a/index.html
+++ b/index.html
@@ -67,15 +67,16 @@
           custom-made solutions in carrier billing, bulk messaging, content management and delivery, mobile marketing,
           and customer interaction in over 200 countries.</p>
   <div class="staticPhone-mobile col-xs-3">
-    <img src="./img/phoneFrame.png" alt="">
+    <img src="./img/campaign1.jpg" alt="">
+    <img src="./img/hero__image2.jpg" alt="">
   </div>
 </div>
 
 
         <a class="btn herobanner__cta btn-warning" href="#services">Our Services</a>
       </div>
-      <div class="hero__phoneContainer col-sm-6">
-        <div id="phone" class="visible">
+      <div class="hero__threeModelContainer col-sm-6">
+        <div id="threeModel" class="visible">
 
         </div>
         <!--        <div class="staticPhone-left">-->
@@ -887,8 +888,8 @@
       </nav>
       <img class="logoCenter" src="img/logo.png" alt="logo">
       <nav>
-        <a href="#company">Privacy Policy</a>
-        <a href="#services">Terms and Conditions</a>
+        <a href="policy.html">Privacy Policy</a>
+        <a href="terms.html">Terms and Conditions</a>
       </nav>
 
     </div>
