--- a/support.html
+++ b/support.html
@@ -101,8 +101,8 @@
     </nav>
     <img class="logoCenter" src="img/logo.png" alt="logo">
     <nav>
-      <a href="#company">Privacy Policy</a>
-      <a href="#services">Terms and Conditions</a>
+      <a href="policy.html">Privacy Policy</a>
+      <a href="terms.html">Terms and Conditions</a>
     </nav>
 
   </div>
