--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <a class="btn herobanner__cta btn-warning" href="#services">Our Services</a>
       </div>
       <div class="hero__threeModelContainer col-sm-6">
-        <div id="threeModel" class="visible">
+        <div id="threeModel">
 
         </div>
         <!--        <div class="staticPhone-left">-->
