--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 </head>
 
 <body>
-<div>
+<div id="smooth-wrapper">
+  <div id="smooth-content">
   <header>
     <div class="container">
       <div class="header_container col-md-12">
@@ -912,10 +913,13 @@
     </div>
     <div class="text-thin text-grey col-sm-12 text-center mb-1"> © Netsmart&nbsp;<span id="year"></span></div>
   </footer>
+  </div>
 </div>
 <!-- Add your site or application content here -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>
+
+
 
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/plugins.js"></script>
@@ -923,21 +927,22 @@
 <script src="js/particles.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 
-<!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-<script>
-  window.ga = function () {
-    ga.q.push(arguments)
-  };
-  ga.q = [];
-  ga.l = +new Date;
-  ga('create', 'UA-XXXXX-Y', 'auto');
-  ga('set', 'anonymizeIp', true);
-  ga('set', 'transport', 'beacon');
-  ga('send', 'pageview')
-</script>
+<!--&lt;!&ndash; Google Analytics: change UA-XXXXX-Y to be your site's ID. &ndash;&gt;-->
+<!--<script>-->
+<!--  window.ga = function () {-->
+<!--    ga.q.push(arguments)-->
+<!--  };-->
+<!--  ga.q = [];-->
+<!--  ga.l = +new Date;-->
+<!--  ga('create', 'UA-XXXXX-Y', 'auto');-->
+<!--  ga('set', 'anonymizeIp', true);-->
+<!--  ga('set', 'transport', 'beacon');-->
+<!--  ga('send', 'pageview')-->
+<!--</script>-->
 <script src="https://www.google-analytics.com/analytics.js" async></script>
 
 <script type="module" src="./js/3dModel.js"></script>
+
 </body>
 
 </html>
