--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
   <header>
     <div class="container">
       <div class="header_container col-md-12">
-        <img class="header__logo" src="./img/logo.png" alt="logo">
+        <a href="index.html">
+      <img class="header__logo" src="./img/logo.png" alt="logo">
+      </a>
         <nav class="xs-d-none">
           <a href="#company">Company</a>
           <a href="#services">Services</a>
