--- a/support.html
+++ b/support.html
@@ -29,7 +29,9 @@
 <header>
   <div class="container">
     <div class="header_container col-md-12">
+      <a href="index.html">
       <img class="header__logo" src="./img/logo.png" alt="logo">
+      </a>
       <nav class="xs-d-none">
         <a href="index.html#company">Company</a>
         <a href="index.html#services">Services</a>
