--- a/policy.html
+++ b/policy.html
@@ -11,11 +11,8 @@
   <meta property="og:type" content="">
   <meta property="og:url" content="">
   <meta property="og:image" content="">
-
-  <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
-
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/bootstrap-theme.css">
@@ -30,11 +27,11 @@
   <div class="container">
     <div class="header_container col-md-12">
       <a href="index.html">
-      <img class="header__logo" src="./img/logo.png" alt="logo">
+        <img class="header__logo" src="./img/logo.png" alt="logo">
       </a>
       <nav class="xs-d-none">
-        <a href="index.html#company">Company</a>
-        <a href="index.html#services">Services</a>
+        <a class="company_link" href="#company_sections">Company</a>
+        <a class="service_link" href="#service_sections">Services</a>
         <a href="https://www.linkedin.com/company/netsmart-cyprus-ltd./">News</a>
         <a href="support.html">Support</a>
 
@@ -44,11 +41,11 @@
         <div class="bar"></div>
         <div class="bar"></div>
       </div>
-      <a href="index.html#contact_us" class="btn btn-primary">Contact us</a>
+      <a href="#contact_us" class="btn btn-primary">Contact us</a>
 
       <nav class="mobile-menu">
         <a href="index.html#company">Company</a>
-        <a href="index.html#services">Services</a>
+        <a href="#services">Services</a>
         <a href="https://www.linkedin.com/company/netsmart-cyprus-ltd./">News</a>
         <a href="support.html">Support</a>
       </nav>
@@ -129,6 +126,7 @@
       <a href="index.html#company">Company</a>
       <a href="index.html#services">Services</a>
       <a href="support.html">Support</a>
+
     </nav>
     <img class="logoCenter" src="img/logo.png" alt="logo">
     <nav>
