--- a/terms.html
+++ b/terms.html
@@ -153,7 +153,7 @@
   </div>
   <div class="col-sm-12 py-1 text-center">
 
-    <a href="">
+    <a href="https://www.linkedin.com/company/netsmart-cyprus-ltd./">
       <svg class="social" viewBox="0 0 111 110" xmlns="http://www.w3.org/2000/svg">
         <linearGradient id="grad2" x1="0%" y1="0%" x2="0%" y2="100%">
           <stop offset="0%" style="stop-color:#c10d3d;stop-opacity:1"/>
