--- a/support.html
+++ b/support.html
@@ -41,7 +41,7 @@
         <div class="bar"></div>
         <div class="bar"></div>
       </div>
-      <a href="#contact_us" class="btn btn-primary">Contact us</a>
+      <a href="index.html#contact_us" class="btn btn-outline-primary">Contact us</a>
 
       <nav class="mobile-menu">
         <a href="index.html#company">Company</a>
@@ -54,10 +54,10 @@
   </div>
 
 </header>
-<section class="bg-grey" style="min-height: calc(100vh - 287px); margin-top: 52px" id="contact_us">
+<section style="min-height: calc(100vh - 287px); margin-top: 52px" id="contact_us">
   <div class="container  gsapUp">
     <div class="col-sm-12">
-      <h2 class="text-center">Support request</h2>
+      <h2 class="text-center mb-2">Support request</h2>
     </div>
     <div class="clearfix"></div>
     <div class="flex-wrap">
