--- a/policy.html
+++ b/policy.html
@@ -27,11 +27,11 @@
   <div class="container">
     <div class="header_container col-md-12">
       <a href="index.html">
-        <img class="header__logo" src="./img/logo.png" alt="logo">
+        <img class="header__logo" src="imgogo.png" alt="logo">
       </a>
       <nav class="xs-d-none">
-        <a class="company_link" href="#company_sections">Company</a>
-        <a class="service_link" href="#service_sections">Services</a>
+        <a class="company_link" href="index.html#company_sections">Company</a>
+        <a class="service_link" href="index.html#service_sections">Services</a>
         <a href="https://www.linkedin.com/company/netsmart-cyprus-ltd./">News</a>
         <a href="support.html">Support</a>
 
@@ -41,11 +41,11 @@
         <div class="bar"></div>
         <div class="bar"></div>
       </div>
-      <a href="#contact_us" class="btn btn-primary">Contact us</a>
+      <a href="index.html#contact_us" class="btn btn-outline-primary">Contact us</a>
 
       <nav class="mobile-menu">
         <a href="index.html#company">Company</a>
-        <a href="#services">Services</a>
+        <a href="index.html#services">Services</a>
         <a href="https://www.linkedin.com/company/netsmart-cyprus-ltd./">News</a>
         <a href="support.html">Support</a>
       </nav>
@@ -57,7 +57,7 @@
 <section class="bg-grey" style="min-height: calc(100vh - 287px); margin-top: 52px" id="contact_us">
   <div class="container  gsapUp">
     <div class="col-sm-12 terms">
-      <h2>Privacy Policy</h2>
+      <h2 class="mb-2">Privacy Policy</h2>
 
       <p>Netsmart Ltd operates the https://www.netsmart.com.cy/ website, which provides the SERVICE.</p>
 
