--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="">
 
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Netsmart | Home</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -248,7 +248,7 @@
                             <div class="col-sm-6 col-xs-12 mb-1 gsapLeft">
                                 <div class="rounded_container bg-default ">
 
-                                    <h5 class="mb-1"><img class="inline_icon" src="img/tr_pricing.png" height="25"
+                                    <h5 class="mb-1"><img class="inline_icon" alt="pricing-icon" src="img/tr_pricing.png" height="25"
                                                           width="35"/>
                                         Pricing</h5>
                                     <ul class="px-0">
@@ -263,7 +263,7 @@
                             <div class="col-sm-6 col-xs-12  mb-1 gsapRight">
                                 <div class="rounded_container bg-default">
 
-                                    <h5 class="mb-1"><img class="inline_icon" src="img/robust_platform.png" height="25"
+                                    <h5 class="mb-1"><img class="inline_icon" alt="robust-platform" src="img/robust_platform.png" height="25"
                                                           width="35"/>Robust
                                         Platform</h5>
                                     <ul class="px-0">
@@ -282,7 +282,7 @@
                             <div class="col-sm-6 col-xs-12  mb-1 gsapLeft">
                                 <div class="rounded_container bg-default">
 
-                                    <h5 class="mb-1"><img class="inline_icon" src="img/safe_secure.png" height="35"
+                                    <h5 class="mb-1"><img class="inline_icon" alt="safe-secure" src="img/safe_secure.png" height="35"
                                                           width="32"/>Safe and
                                         Secure</h5>
                                     <ul class="px-0">
@@ -300,7 +300,7 @@
                             <div class="col-sm-6 col-xs-12  mb-1 gsapRight">
                                 <div class="rounded_container bg-default">
 
-                                    <h5 class="mb-1"><img class="inline_icon" src="img/compliance.png" height="35"
+                                    <h5 class="mb-1"><img class="inline_icon" alt="compliance-icon" src="img/compliance.png" height="35"
                                                           width="35"/>Compliance</h5>
                                     <ul class="px-0">
                                         <li class="mb-1">We provide local compliance and regulatory assistance to our
@@ -893,17 +893,17 @@
                           class="col-sm-4 d-flex flex-column justify-content-between">
                         <input type="hidden" name="form-name" value="contactForm">
                         <div class="input-container">
-                            <input placeholder=" " id="name" required name="fullContactName" class="text-input mb-1"
+                            <input placeholder=" " autocomplete="1" id="name" required name="fullContactName" class="text-input mb-1"
                                    type="text"><label
                                 for="name">Full Name</label></div>
                         <div class="input-container">
-                            <input placeholder=" " id="contactEmail" name="contactEmail" id="contactEmail"
+                            <input placeholder=" " autocomplete="1" id="contactEmail" name="contactEmail" id="contactEmail"
                                    class="text-input mb-1" type="text">
                             <label for="contactEmail">Email</label></div>
                         <div class=" input-container">
-                            <input placeholder=" " name="formContactPhone" id="contactPhone" class="text-input mb-1"
-                                   type="text"><label
-                                for="email">Phone</label></div>
+                            <input placeholder=" " autocomplete="1" name="formContactPhone" id="contactPhone" class="text-input mb-1"
+                                   type="number"><label
+                                for="contactPhone">Phone</label></div>
                         <div class="input-container">
           <textarea style="font-size: 14px; min-height: 100px" placeholder="Details"
                     id="email" class="text-input mb-1" type="text"></textarea></div>
@@ -960,7 +960,6 @@
         document.write('<script type="module" src="js/3dModel.js"><\/script>');
     }
 </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 <!--&lt;!&ndash; Google Analytics: change UA-XXXXX-Y to be your site's ID. &ndash;&gt;-->
 <!--<script>-->
 <!--  window.ga = function () {-->
@@ -973,6 +972,6 @@
 <!--  ga('set', 'transport', 'beacon');-->
 <!--  ga('send', 'pageview')-->
 <!--</script>-->
-<script src="https://www.google-analytics.com/analytics.js" async></script>
+<!--<script src="https://www.google-analytics.com/analytics.js" async></script>-->
 </body>
 </html>
