--- a/policy.html
+++ b/policy.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html  lang="">
 
 <head>
   <meta charset="utf-8">
-  <title>Netsmart - Privacy Policy</title>
+  <title>Netsmart | Privacy Policy</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
