--- a/terms.html
+++ b/terms.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html  lang="">
 
 <head>
   <meta charset="utf-8">
-  <title>Netsmart - Terms and Conditions</title>
+  <title>Netsmart | Terms and Conditions</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta property="og:title" content="">
@@ -26,7 +26,7 @@
   <div class="container">
     <div class="header_container col-md-12">
       <a href="index.html">
-        <img class="header__logo" src="imgogo.png" alt="logo">
+        <img class="header__logo" src="./img/logo.png" alt="logo">
       </a>
       <nav class="xs-d-none">
         <a class="company_link" href="index.html#company_sections">Company</a>
@@ -56,9 +56,7 @@
 <section class="bg-grey" style="min-height: calc(100vh - 287px); margin-top: 52px" id="contact_us">
   <div class="container  gsapUp">
     <div class="col-sm-12 terms">
-      <h2>Terms and Conditions</h2>
-
-      <h3>Introduction</h3>
+      <h2 class="mb-2">Terms and Conditions</h2>
 
       <p>These Website Standard Terms and Conditions written on this webpage shall manage your use of our website, Netsmart Services accessible at www.netsmart.com.cy.</p>
 
