--- a/terms.html
+++ b/terms.html
@@ -26,13 +26,13 @@
   <div class="container">
     <div class="header_container col-md-12">
       <a href="index.html">
-        <img class="header__logo" src="./img/logo.png" alt="logo">
+        <img class="header__logo" src="img/logo.png" alt="logo">
       </a>
       <nav class="xs-d-none">
         <a class="company_link" href="index.html#company_sections">Company</a>
-        <a class="service_link" href="index.html#service_sections">Services</a>
-        <a href="https://www.linkedin.com/company/netsmart-cyprus-ltd./">News</a>
-        <a href="support.html">Support</a>
+        <a class="payments_link" href="index.html#payments">Mobile payments</a>
+        <a class="messaging_link" href="index.html#messaging">Messaging</a>
+        <!--                        <a href="support.html">Support</a>-->
 
       </nav>
       <div class="menu-toggle">
@@ -43,13 +43,12 @@
       <a href="index.html#contact_us" class="btn btn-outline-primary">Contact us</a>
 
       <nav class="mobile-menu">
-        <a href="index.html#company">Company</a>
-        <a href="index.html#services">Services</a>
-        <a href="https://www.linkedin.com/company/netsmart-cyprus-ltd./">News</a>
-        <a  href="support.html">Support</a>
+        <a class="company_link" href="index.html#company_sections">Company</a>
+        <a class="payments_link" href="index.html#payments">Mobile payments</a>
+        <a class="messaging_link" href="index.html#messaging">Messaging</a>
+        <a href="support.html">Support</a>
       </nav>
     </div>
-
   </div>
 
 </header>
@@ -134,35 +133,15 @@
 <footer class="bg-grey">
   <div class="col-sm-12 py-1 d-flex justify-content-between align-items-center">
     <nav>
-      <a href="index.html#company">Company</a>
-      <a href="index.html#services">Services</a>
-      <a href="support.html">Support</a>
-      <a href="https://www.linkedin.com/company/netsmart-cyprus-ltd./">Linkedin</a>
-
-    </nav>
-    <img class="logoCenter" src="img/logo.png" alt="logo">
-    <nav>
       <a href="policy.html">Privacy Policy</a>
       <a href="terms.html">Terms and Conditions</a>
     </nav>
 
-  </div>
-  <!--            <div class="col-sm-12">-->
-  <!--                <div class="divider div-transparent mb-0"></div>-->
-  <!--            </div>-->
-  <!--            <div class="col-sm-12 py-1 d-flex justify-content-between footer_second">-->
+    <nav>
+      <span style="margin: 0 16px"> © Netsmart&nbsp;<span id="year"></span></span>
+    </nav>
 
-  <!--                <a style="margin: 0 16px" href="https://www.linkedin.com/company/netsmart-cyprus-ltd./">-->
-  <!--                    <svg class="social" viewBox="0 0 111 110" xmlns="http://www.w3.org/2000/svg">-->
-  <!--                        <linearGradient id="grad2" x1="0%" y1="0%" x2="0%" y2="100%">-->
-  <!--                            <stop offset="0%" style="stop-color:var(&#45;&#45;main-color);stop-opacity:1"/>-->
-  <!--                            <stop offset="100%" style="stop-color:#5f0b32;stop-opacity:1"/>-->
-  <!--                        </linearGradient>-->
-  <!--                        <path fill="url(#grad2)" d="M102.571 0H7.86545C3.52589 0 0 3.57521 0 7.96408V102.497C0 106.886 3.52589 110.462 7.86545 110.462H102.571C106.911 110.462 110.462 106.886 110.462 102.497V7.96408C110.462 3.57521 106.911 0 102.571 0ZM33.385 94.6813H17.013V41.9655H33.4097V94.6813H33.385ZM25.199 34.7658C19.9472 34.7658 15.7063 30.5002 15.7063 25.273C15.7063 20.0458 19.9472 15.7802 25.199 15.7802C30.4262 15.7802 34.6918 20.0458 34.6918 25.273C34.6918 30.5249 30.4509 34.7658 25.199 34.7658ZM94.7553 94.6813H78.3833V69.0385C78.3833 62.9236 78.26 55.0582 69.8768 55.0582C61.3456 55.0582 60.0388 61.7155 60.0388 68.5946V94.6813H43.6668V41.9655H59.3731V49.1652H59.595C61.7894 45.0229 67.1399 40.6587 75.104 40.6587C91.6732 40.6587 94.7553 51.5816 94.7553 65.7838V94.6813Z"></path>-->
-  <!--                    </svg>-->
-  <!--                </a>-->
-  <!--                <span style="margin: 0 16px"> © Netsmart&nbsp;<span id="year"></span></span>-->
-  <!--            </div>-->
+  </div>
 
 </footer>
 </body>
