--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         </div>
 
 
-                        <a class="btn btn-accent herobanner__cta" href="#services">Our Services</a>
+                        <a class="btn btn-accent herobanner__cta" href="#payments">Our Services</a>
                     </div>
                     <div class="col-sm-6 col-xs-4" >
                         <div class="hero__threeModelContainer" id="particles-js">
