--- a/policy.html
+++ b/policy.html
@@ -15,7 +15,7 @@
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/bootstrap-theme.css">
+
   <link rel="stylesheet" href="css/main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,31 +29,34 @@
       <a href="index.html">
         <img class="header__logo" src="img/logo.png" alt="logo">
       </a>
-      <nav class="xs-d-none">
-        <a class="company_link" href="index.html#company_sections">Company</a>
-        <a class="payments_link" href="index.html#payments">Mobile payments</a>
-        <a class="messaging_link" href="index.html#messaging">Messaging</a>
-        <!--                        <a href="support.html">Support</a>-->
+      <nav class="desktop-menu xs-d-none">
+        <a data-url="company_sections" href="./index.html#company_sections">Company</a>
+        <ul data-url="payments">Mobile Payments
+          <li data-url="premium_sms"><a href="./index.html#premium_sms">Premium SMS</a></li>
+          <li data-url="dcb"><a href="./index.html#dcb">Direct Carrier Billing</a></li>
+        </ul>
 
+        <a data-url="messaging" href="./index.html#messaging">Messaging</a>
       </nav>
+
+      <a href="index.html#contact_us" class="btn btn-outline-primary">Contact us</a>
       <div class="menu-toggle">
         <div class="bar"></div>
         <div class="bar"></div>
         <div class="bar"></div>
       </div>
-      <a href="index.html#contact_us" class="btn btn-outline-primary">Contact us</a>
-
       <nav class="mobile-menu">
-        <a class="company_link" href="index.html#company_sections">Company</a>
-        <a class="payments_link" href="index.html#payments">Mobile payments</a>
-        <a class="messaging_link" href="index.html#messaging">Messaging</a>
-        <a href="support.html">Support</a>
+        <a data-url="company_sections" href="./index.html#company_sections">Company</a>
+        <a data-url="premium_sms" href="./index.html#premium_sms">Premium SMS</a></li>
+        <a data-url="dcb" href="./index.html#dcb">Direct Carrier Billing</a>
+        <a data-url="messaging" href="./index.html#messaging">Messaging</a>
+
       </nav>
     </div>
   </div>
 
 </header>
-<section class="bg-grey" style="min-height: calc(100vh - 287px); margin-top: 52px" id="contact_us">
+<section style="min-height: calc(100vh - 287px); margin-top: 52px" id="contact_us">
   <div class="container  gsapUp">
     <div class="col-sm-12 terms">
       <h2 class="mb-2">Privacy Policy</h2>
@@ -133,5 +136,6 @@
   </div>
 
 </footer>
+<script src="./js/main.js"></script>
 </body>
 </html>
