--- a/index.html
+++ b/index.html
@@ -25,15 +25,17 @@
 <body>
 <div id="smooth-wrapper">
     <div id="smooth-content">
-        <header>
+        <header id="header">
             <div class="container">
                 <div class="header_container col-md-12">
-                    <a href="index.html">
+                    <a href="./index.html">
                         <img class="header__logo" src="img/logo.png" alt="logo">
                     </a>
                     <nav class="desktop-menu xs-d-none">
                         <a data-url="company_sections" href="./index.html#company_sections">Company</a>
-                        <ul data-url="payments">Mobile Payments
+
+                        <ul data-url="payments">
+                            <a href="./index.html#payments">Payment Solutions</a>
                                 <li data-url="premium_sms"><a href="./index.html#premium_sms">Premium SMS</a></li>
                                 <li data-url="dcb"><a href="./index.html#dcb">Direct Carrier Billing</a></li>
                         </ul>
@@ -41,7 +43,7 @@
                         <a data-url="messaging" href="./index.html#messaging">Messaging</a>
                     </nav>
 
-                    <a href="index.html#contact_us" class="btn btn-outline-primary">Contact us</a>
+                    <a href="./index.html#contact_us" class="btn btn-outline-primary">Contact us</a>
                     <div class="menu-toggle">
                         <div class="bar"></div>
                         <div class="bar"></div>
@@ -49,8 +51,11 @@
                     </div>
                     <nav class="mobile-menu">
                         <a data-url="company_sections" href="./index.html#company_sections">Company</a>
-                        <a data-url="premium_sms" href="./index.html#premium_sms">Premium SMS</a></li>
-                       <a data-url="dcb" href="./index.html#dcb">Direct Carrier Billing</a>
+                        <a data-url="payments" href="./index.html#payments">Payment Solutions</a>
+                        <ul>
+                            <li><a data-url="premium_sms" href="./index.html#premium_sms">Premium SMS</a></li></li>
+                            <li><a data-url="dcb" href="./index.html#dcb">Direct Carrier Billing</a></li>
+                        </ul>
                         <a data-url="messaging" href="./index.html#messaging">Messaging</a>
 
                     </nav>
@@ -358,7 +363,7 @@
             <section>
                 <div class="container gsapUp">
 
-                    <h2 id="payment_methods">Mobile Payment Methods</h2>
+                    <h2 id="payment_methods">Payment Solutions</h2>
                     <h5 class="text-center mb-2">Seamless transactions.</h5>
 
                     <div class="col-sm-6">
@@ -898,7 +903,7 @@
                         <h5 class="text-grey text-center lh-base mb-0 gsapUp">To find out more about
                             our messaging services and how
                             we can benefit your business
-                            <a href="index.html#contact_us" class="text-accent">contact us.</a>
+                            <a href="./index.html#contact_us" class="text-accent">contact us.</a>
                         </h5>
                     </div>
                 </div>
