--- a/support.html
+++ b/support.html
@@ -22,15 +22,17 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 <body>
-<header>
+<header id="header">
   <div class="container">
     <div class="header_container col-md-12">
-      <a href="index.html">
+      <a href="./index.html">
         <img class="header__logo" src="img/logo.png" alt="logo">
       </a>
       <nav class="desktop-menu xs-d-none">
         <a data-url="company_sections" href="./index.html#company_sections">Company</a>
-        <ul data-url="payments">Mobile Payments
+
+        <ul data-url="payments">
+          <a href="./index.html#payments">Payment Solutions</a>
           <li data-url="premium_sms"><a href="./index.html#premium_sms">Premium SMS</a></li>
           <li data-url="dcb"><a href="./index.html#dcb">Direct Carrier Billing</a></li>
         </ul>
@@ -38,7 +40,7 @@
         <a data-url="messaging" href="./index.html#messaging">Messaging</a>
       </nav>
 
-      <a href="index.html#contact_us" class="btn btn-outline-primary">Contact us</a>
+      <a href="./index.html#contact_us" class="btn btn-outline-primary">Contact us</a>
       <div class="menu-toggle">
         <div class="bar"></div>
         <div class="bar"></div>
@@ -46,8 +48,11 @@
       </div>
       <nav class="mobile-menu">
         <a data-url="company_sections" href="./index.html#company_sections">Company</a>
-        <a data-url="premium_sms" href="./index.html#premium_sms">Premium SMS</a></li>
-        <a data-url="dcb" href="./index.html#dcb">Direct Carrier Billing</a>
+        <a data-url="payments" href="./index.html#payments">Payment Solutions</a>
+        <ul>
+          <li><a data-url="premium_sms" href="./index.html#premium_sms">Premium SMS</a></li></li>
+          <li><a data-url="dcb" href="./index.html#dcb">Direct Carrier Billing</a></li>
+        </ul>
         <a data-url="messaging" href="./index.html#messaging">Messaging</a>
 
       </nav>
@@ -55,6 +60,7 @@
   </div>
 
 </header>
+
 <section style="min-height: calc(100vh - 287px); margin-top: 52px" id="contact_us">
   <div class="container  gsapUp">
     <div class="col-sm-12">
